@@ -1,52 +1,47 @@
-html, body {
-	margin: 0;
-	padding: 0;
+html {
+	height: 100%;
+	box-sizing: border-box;
+}
 
+body {
+	position: relative;
+	min-height: 100%;
+	box-sizing: border-box;
+	padding-bottom: 1.5rem;
+	margin: 0;
+}
+
+html, body {
 	color: #fff;
-	background-color: #000;
+	background-color: #222;
 	font-family: sans-serif;
-	text-align: center;
+}
+
+* {
+	box-sizing: inherit;
 }
 
 /* Hide most of the interface when the mouse isn't over the page */
-body #footer,
-body #menu,
 body #size-slideshow,
 body #info {
 	display: none;
 }
-body:hover #footer,
-body:hover #menu,
 body:hover #size-slideshow,
 body:hover #info {
 	display: inherit;
 }
 
-/* Hide the menu on a small screen */
-@media screen and (max-width: 1000px) {
-	body #menu, body:hover #menu {
-		display: none;
-	}
-}
-
 /* Footer */
 #footer {
 	position: fixed;
-	bottom: 0em;
-	left: 0;
-	height: 1em;
+	bottom: 0;
+	width: 100%;
 
-	color: #999;
-	font-size: 66.6%;
-	font-weight: 100;
-	padding: 0.2em;
-	background: rgba(0, 0, 0, 0.5);
-	border-radius: 0 0.75em 0 0;
-}
-
-#footer:hover {
-	acolor: #fff;
-	abackground: rgba(0, 0, 0, 1.0);
+	color: #fff;
+	font-size: 80%;
+	padding: 0.5rem 1rem;
+	background: #555;
+	border-top: 2px solid #777;
 }
 
 #footer br {
@@ -81,17 +76,14 @@ body:hover #info {
     width: auto;
 }
 
-#menu,
 #size-slideshow,
 #info {
 	position: absolute;
-	z-index: 1;
 
 	color: #999;
 	background: rgba(0, 0, 0, 0.5);
 }
 
-#menu:hover,
 #size-slideshow:hover,
 #info:hover {
 	color: #ddd;
@@ -99,13 +91,31 @@ body:hover #info {
 }
 
 #menu {
+	position: fixed;
+	z-index: 5;
 	top: 0;
-	right: 0;
-	height: 1.5rem;
-	font-size: 1.5rem;
+        height: 3.5rem;
+	width: 100%;
+	font-size: 1em;
 	padding: 1rem;
+	border-bottom: 2px solid #777;
+	background: #555;
+}
 
-	border-radius: 0 0 0 0.75em;
+#menuButtons {
+	position: relative;
+	top: -0.66rem;
+	display: block;
+	float: right;
+}
+
+#toggleMap {
+	position: absolute;
+	right: 0;
+	top: 0;
+	padding: 0;
+	cursor: pointer;
+	font-size: 2em;
 }
 
 #info {
@@ -185,10 +195,6 @@ body:hover #info {
 	background: rgba(0, 0, 0, 0.5);
 }
 
-.nav:hover {
-	background: rgba(0, 0, 0, 1.0);
-}
-
 .nav a {
 	color: #999;
 	background: transparent;
@@ -196,7 +202,6 @@ body:hover #info {
 
 .nav:hover a {
 	color: #fff;
-	background: transparent;
 }
 
 .nav.left {
@@ -236,7 +241,17 @@ body:hover #info {
 /* Directory (album) view */
 #directory {
 	text-align: center;
-	margin: 1em 0;
+	margin: 4em 0em;
+}
+
+.mapOnRight #files {
+	position: absolute;
+	right: 33%;
+}
+
+.mapOnTop #files {
+	position: absolute;
+	top: 33%;
 }
 
 #files a {
@@ -250,9 +265,6 @@ body:hover #info {
 	background-color: #888;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
-	box-shadow: 0 0 0.8em #000, 0 0 0.5em #000, 0 0 0.2em #000;
-
-	border-radius: 1ex;
 }
 
 #files a.dimmed {
@@ -298,7 +310,7 @@ body:hover #info {
 
 /* General — links */
 a {
-	color: #060;
+	color: #8e8;
 	text-decoration: none;
 }
 
@@ -310,49 +322,45 @@ a img {
 	border: none;
 }
 
-/* For not-huge screens */
-@media screen and (max-width: 1060px) {
-	#directory {
-		margin: 0;
-		padding: 0.5em;
-		border-radius: 0;
-	}
-}
-
 /* Map stuff */
 #mapcontainer {
-	display: none;
-
 	position: fixed;
-	width: 20%;
-	right: 0;
-	bottom: 0;
+	display: none;
 	background: transparent;
 }
 
-.map {
+.mapOnRight #mapcontainer {
+}
+
+.mapOnRight .gallerymap {
+	width: 33%;
+	right: 0;
+	top: 3.5rem;
+	bottom: 0;
+	min-height: 50%;
+}
+
+.mapOnTop .gallerymap {
+	height: 33%;
+	top: 3.5rem;
+	width: 100%;
+}
+
+.viewmap {
+	width: 75%;
+	height: 100%;
+}
+
+#map {
+	display: none;
 	font-size: 80%;
 	color: #222;
 	background: #fff;
-	margin: 1em auto;
-	border: 5px solid black;
-	border-width: 5px 0 0 5px;
-	border-radius: 1em 0 0 0;
+	margin: 0;
 	overflow: hidden;
-
-	margin: 0 auto;
 }
 
 .map a img {border:none;}
-
-#hidemap {
-	display: block;
-	float: right;
-	padding: 0.2em 0.4em;
-	cursor: pointer;
-	background: rgba(0, 0, 0, 0.5);
-	border-radius: 0.75em 0 0 0;
-}
 
 #map a[href] {
 	color: #436976;
